add: enforcement of 2048 dimensions for newly created vector indexes
whilst here, also checked the validity of the similarity function