@@ -22,19 +22,27 @@ package org.neo4j.kernel.api.index;
 import static org.assertj.core.api.Assertions.assertThatCode;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
-import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
-import org.assertj.core.api.AbstractThrowableAssert;
+import java.util.Map;
 import org.assertj.core.api.ThrowableAssert.ThrowingCallable;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.EnumSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.neo4j.graphdb.Label;
 import org.neo4j.graphdb.RelationshipType;
+import org.neo4j.graphdb.schema.IndexSetting;
 import org.neo4j.graphdb.schema.IndexSettingUtil;
+import org.neo4j.internal.schema.IndexConfig;
 import org.neo4j.internal.schema.IndexPrototype;
 import org.neo4j.internal.schema.IndexType;
 import org.neo4j.internal.schema.SchemaDescriptor;
 import org.neo4j.internal.schema.SchemaDescriptors;
+import org.neo4j.kernel.api.impl.schema.vector.VectorSimilarityFunction;
+import org.neo4j.kernel.api.impl.schema.vector.VectorUtils;
 import org.neo4j.kernel.impl.coreapi.InternalTransaction;
 import org.neo4j.kernel.internal.GraphDatabaseAPI;
 import org.neo4j.test.Tags;
@@ -69,47 +77,115 @@ public class VectorIndexCreationTest {
 
     @Test
     void shouldAcceptNodeVectorIndex() {
-        assertThatCode(() -> createVectorIndex(SchemaDescriptors.forLabel(labelId, propKeyIds[0])))
+        assertThatCode(() -> createVectorIndex(SchemaDescriptors.forLabel(labelId, propKeyIds[0]), defaultConfig()))
                 .doesNotThrowAnyException();
-        assertThatCode(() -> createNodeVectorIndexCoreAPI(PROP_KEYS.get(1))).doesNotThrowAnyException();
+        assertThatCode(() -> createNodeVectorIndexCoreAPI(PROP_KEYS.get(1), defaultSettings()))
+                .doesNotThrowAnyException();
     }
 
     @Test
     void shouldRejectRelationshipVectorIndex() {
         assertUnsupportedRelationshipIndex(
-                () -> createVectorIndex(SchemaDescriptors.forRelType(relTypeId, propKeyIds[0])));
-        assertUnsupportedRelationshipIndex(() -> createRelVectorIndexCoreAPI(PROP_KEYS.get(1)));
+                () -> createVectorIndex(SchemaDescriptors.forRelType(relTypeId, propKeyIds[0]), defaultConfig()));
+        assertUnsupportedRelationshipIndex(() -> createRelVectorIndexCoreAPI(PROP_KEYS.get(1), defaultSettings()));
+    }
+
+    @ParameterizedTest
+    @ValueSource(ints = {1, 738, 1024, 1408, 1536, 2048, VectorUtils.MAX_DIMENSIONS})
+    void shouldAcceptValidDimensions(int dimensions) {
+        assertThatCode(() -> createVectorIndex(
+                        SchemaDescriptors.forLabel(labelId, propKeyIds[0]),
+                        defaultConfigWith(IndexSetting.vector_Dimensions(), dimensions)))
+                .doesNotThrowAnyException();
+
+        assertThatCode(() -> createNodeVectorIndexCoreAPI(
+                        PROP_KEYS.get(1), defaultSettingsWith(IndexSetting.vector_Dimensions(), dimensions)))
+                .doesNotThrowAnyException();
+    }
+
+    @ParameterizedTest
+    @ValueSource(ints = {-1, 0})
+    void shouldRejectIllegalDimensions(int dimensions) {
+        assertIllegalDimensions(() -> createVectorIndex(
+                SchemaDescriptors.forLabel(labelId, propKeyIds[0]),
+                defaultConfigWith(IndexSetting.vector_Dimensions(), dimensions)));
+
+        assertIllegalDimensions(() -> createNodeVectorIndexCoreAPI(
+                PROP_KEYS.get(1), defaultSettingsWith(IndexSetting.vector_Dimensions(), dimensions)));
+    }
+
+    @Test
+    void shouldRejectUnsupportedDimensions() {
+        final var dimensions = VectorUtils.MAX_DIMENSIONS + 1;
+
+        assertUnsupportedDimensions(() -> createVectorIndex(
+                SchemaDescriptors.forLabel(labelId, propKeyIds[0]),
+                defaultConfigWith(IndexSetting.vector_Dimensions(), dimensions)));
+
+        assertUnsupportedDimensions(() -> createNodeVectorIndexCoreAPI(
+                PROP_KEYS.get(1), defaultSettingsWith(IndexSetting.vector_Dimensions(), dimensions)));
+    }
+
+    @ParameterizedTest
+    @EnumSource
+    void shouldAcceptValidSimilarityFunction(VectorSimilarityFunction similarityFunction) {
+        final var validSimilarityFunctionName = similarityFunction.name();
+
+        assertThatCode(() -> createVectorIndex(
+                        SchemaDescriptors.forLabel(labelId, propKeyIds[0]),
+                        defaultConfigWith(IndexSetting.vector_Similarity_Function(), validSimilarityFunctionName)))
+                .doesNotThrowAnyException();
+
+        assertThatCode(() -> createNodeVectorIndexCoreAPI(
+                        PROP_KEYS.get(1),
+                        defaultSettingsWith(IndexSetting.vector_Similarity_Function(), validSimilarityFunctionName)))
+                .doesNotThrowAnyException();
+    }
+
+    @Test
+    void shouldRejectIllegalSimilarityFunction() {
+        final var invalidSimilarityFunctionName = "ClearlyThisIsNotASimilarityFunction";
+
+        assertIllegalSimilarityFunction(() -> createVectorIndex(
+                SchemaDescriptors.forLabel(labelId, propKeyIds[0]),
+                defaultConfigWith(IndexSetting.vector_Similarity_Function(), invalidSimilarityFunctionName)));
+
+        assertIllegalSimilarityFunction(() -> createNodeVectorIndexCoreAPI(
+                PROP_KEYS.get(1),
+                defaultSettingsWith(IndexSetting.vector_Similarity_Function(), invalidSimilarityFunctionName)));
     }
 
     @Test
     void shouldRejectCompositeKeys() {
-        assertUnsupportedComposite(() -> createVectorIndex(SchemaDescriptors.forLabel(labelId, propKeyIds)));
-        assertUnsupportedComposite(() -> createVectorIndex(SchemaDescriptors.forRelType(relTypeId, propKeyIds)));
-        assertUnsupportedComposite(() -> createNodeVectorIndexCoreAPI(PROP_KEYS));
-        assertUnsupportedComposite(() -> createRelVectorIndexCoreAPI(PROP_KEYS));
+        assertUnsupportedComposite(
+                () -> createVectorIndex(SchemaDescriptors.forLabel(labelId, propKeyIds), defaultConfig()));
+        assertUnsupportedComposite(
+                () -> createVectorIndex(SchemaDescriptors.forRelType(relTypeId, propKeyIds), defaultConfig()));
+        assertUnsupportedComposite(() -> createNodeVectorIndexCoreAPI(PROP_KEYS, defaultSettings()));
+        assertUnsupportedComposite(() -> createRelVectorIndexCoreAPI(PROP_KEYS, defaultSettings()));
     }
 
-    private void createVectorIndex(SchemaDescriptor schema) throws Exception {
+    private void createVectorIndex(SchemaDescriptor schema, IndexConfig config) throws Exception {
         try (final var tx = db.beginTx()) {
             final var ktx = ((InternalTransaction) tx).kernelTransaction();
             final var prototype = IndexPrototype.forSchema(schema)
                     .withIndexType(IndexType.VECTOR)
-                    .withIndexConfig(IndexSettingUtil.defaultConfigForTest(IndexType.VECTOR.toPublicApi()));
+                    .withIndexConfig(config);
             ktx.schemaWrite().indexCreate(prototype);
             tx.commit();
         }
     }
 
-    private void createNodeVectorIndexCoreAPI(String... propKeys) {
-        createNodeVectorIndexCoreAPI(Arrays.asList(propKeys));
+    private void createNodeVectorIndexCoreAPI(String propKey, Map<IndexSetting, Object> settings) {
+        createNodeVectorIndexCoreAPI(List.of(propKey), settings);
     }
 
-    private void createNodeVectorIndexCoreAPI(List<String> propKeys) {
+    private void createNodeVectorIndexCoreAPI(List<String> propKeys, Map<IndexSetting, Object> settings) {
         try (final var tx = db.beginTx()) {
             var creator = tx.schema()
                     .indexFor(LABEL)
                     .withIndexType(IndexType.VECTOR.toPublicApi())
-                    .withIndexConfiguration(IndexSettingUtil.defaultSettingsForTesting(IndexType.VECTOR.toPublicApi()));
+                    .withIndexConfiguration(settings);
             for (final var propKey : propKeys) {
                 creator = creator.on(propKey);
             }
@@ -118,16 +194,16 @@ public class VectorIndexCreationTest {
         }
     }
 
-    private void createRelVectorIndexCoreAPI(String... propKeys) {
-        createRelVectorIndexCoreAPI(Arrays.asList(propKeys));
+    private void createRelVectorIndexCoreAPI(String propKey, Map<IndexSetting, Object> settings) {
+        createRelVectorIndexCoreAPI(List.of(propKey), settings);
     }
 
-    private void createRelVectorIndexCoreAPI(List<String> propKeys) {
+    private void createRelVectorIndexCoreAPI(List<String> propKeys, Map<IndexSetting, Object> settings) {
         try (final var tx = db.beginTx()) {
             var creator = tx.schema()
                     .indexFor(REL_TYPE)
                     .withIndexType(IndexType.VECTOR.toPublicApi())
-                    .withIndexConfiguration(IndexSettingUtil.defaultSettingsForTesting(IndexType.VECTOR.toPublicApi()));
+                    .withIndexConfiguration(settings);
             for (final var propKey : propKeys) {
                 creator = creator.on(propKey);
             }
@@ -136,19 +212,63 @@ public class VectorIndexCreationTest {
         }
     }
 
+    private static IndexConfig defaultConfig() {
+        return IndexSettingUtil.defaultConfigForTest(IndexType.VECTOR.toPublicApi());
+    }
+
+    private static IndexConfig defaultConfigWith(IndexSetting setting, Object value) {
+        return configFrom(defaultSettingsWith(setting, value));
+    }
+
+    private static IndexConfig configFrom(Map<IndexSetting, Object> settings) {
+        return IndexSettingUtil.toIndexConfigFromIndexSettingObjectMap(settings);
+    }
+
+    private static Map<IndexSetting, Object> defaultSettings() {
+        return IndexSettingUtil.defaultSettingsForTesting(IndexType.VECTOR.toPublicApi());
+    }
+
+    private static Map<IndexSetting, Object> defaultSettingsWith(IndexSetting setting, Object value) {
+        final var settings = new HashMap<>(defaultSettings());
+        settings.put(setting, value);
+        return Collections.unmodifiableMap(settings);
+    }
+
     private static void assertUnsupportedRelationshipIndex(ThrowingCallable callable) {
-        assertUnsupported(callable)
+        assertThatThrownBy(callable)
+                .isInstanceOf(UnsupportedOperationException.class)
                 .hasMessageContainingAll(
                         "Relationship indexes are not supported for", IndexType.VECTOR.name(), "index type");
     }
 
-    private static void assertUnsupportedComposite(ThrowingCallable callable) {
-        assertUnsupported(callable)
+    private static void assertIllegalDimensions(ThrowingCallable callable) {
+        assertThatThrownBy(callable)
+                .isInstanceOf(IllegalArgumentException.class)
+                .cause()
                 .hasMessageContainingAll(
-                        "Composite indexes are not supported for", IndexType.VECTOR.name(), "index type");
+                        IndexSetting.vector_Dimensions().getSettingName(), "is expected to be positive");
     }
 
-    private static AbstractThrowableAssert<?, ? extends Throwable> assertUnsupported(ThrowingCallable callable) {
-        return assertThatThrownBy(callable).isInstanceOf(UnsupportedOperationException.class);
+    private static void assertUnsupportedDimensions(ThrowingCallable callable) {
+        assertThatThrownBy(callable)
+                .isInstanceOf(UnsupportedOperationException.class)
+                .hasMessageContainingAll(IndexSetting.vector_Dimensions().getSettingName(), "set greater than");
+    }
+
+    private static void assertIllegalSimilarityFunction(ThrowingCallable callable) {
+        assertThatThrownBy(callable)
+                .isInstanceOf(IllegalArgumentException.class)
+                .cause()
+                .hasMessageContainingAll(
+                        "is an unsupported vector similarity function",
+                        "Supported",
+                        VectorSimilarityFunction.SUPPORTED.toString());
+    }
+
+    private static void assertUnsupportedComposite(ThrowingCallable callable) {
+        assertThatThrownBy(callable)
+                .isInstanceOf(UnsupportedOperationException.class)
+                .hasMessageContainingAll(
+                        "Composite indexes are not supported for", IndexType.VECTOR.name(), "index type");
     }
 }
